objects/ssot__Promotion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivePromotionStartDate__c</fullName>
        <label>Active Promotion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CumulativeUsageTargetAmount__c</fullName>
        <label>Cumulative Usage Target Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyId__c</fullName>
        <label>Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>[DoNotUse]Currency</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultVoucherDefinitionId__c</fullName>
        <label>Default Voucher Definition</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountBuyAmount__c</fullName>
        <label>Discount Buy Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountBuyCount__c</fullName>
        <label>Discount Buy Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountExclusivityTypeId__c</fullName>
        <label>Discount Exclusivity Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountExclusivityType__c</fullName>
        <label>[DoNotUse]Discount Exclusivity Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountTypeId__c</fullName>
        <label>Discount Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountType__c</fullName>
        <label>[DoNotUse]Discount Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountValueAmount__c</fullName>
        <label>[DoNotUse]Discount Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountValueAmt__c</fullName>
        <label>Discount Value Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DiscountValueCount__c</fullName>
        <label>Discount Value Count</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentEndDate__c</fullName>
        <label>Enrollment End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentStartDate__c</fullName>
        <label>Enrollment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EvaluationOrderRankNbr__c</fullName>
        <label>Evaluation Order Rank</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EvaluationOrderRankNumber__c</fullName>
        <label>[DoNotUse]Evaluation Order Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentActionId__c</fullName>
        <label>Fulfillment Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfillmentAction__c</fullName>
        <label>[DoNotUse]Fulfillment Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InStoreDisplayEndDate__c</fullName>
        <label>In Store Display End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InStoreDisplayStartDate__c</fullName>
        <label>In Store Display Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InactivePromotionEndDate__c</fullName>
        <label>Inactive Promotion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAutomatic__c</fullName>
        <label>Automatic</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCommercePromotion__c</fullName>
        <label>Commerce Promotion</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEnrollmentRequired__c</fullName>
        <label>Is Enrollment Required</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeadId__c</fullName>
        <label>Lead</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSourceId__c</fullName>
        <label>Lead Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSource__c</fullName>
        <label>[DoNotUse]Lead Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyId__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrency__c</fullName>
        <label>[DoNotUse]Loyalty Program Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NotesText__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ObjectiveText__c</fullName>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PointsQuantity__c</fullName>
        <label>Points Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryCampaignId__c</fullName>
        <label>Primary Campaign</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionClassId__c</fullName>
        <label>Promotion Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionClass__c</fullName>
        <label>[DoNotUse]Promotion Class</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionCodeText__c</fullName>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionMarketSegments__c</fullName>
        <label>PromotionMarketSegments relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionMethodId__c</fullName>
        <label>Promotion Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionMethod__c</fullName>
        <label>[DoNotUse]Promotion Method</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionReasonId__c</fullName>
        <label>Promotion Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionReason__c</fullName>
        <label>[DoNotUse]Promotion Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionStatusId__c</fullName>
        <label>Promotion Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionStatus__c</fullName>
        <label>[DoNotUse]Promotion Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionTypeId__c</fullName>
        <label>Promotion Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionType__c</fullName>
        <label>[DoNotUse]Promotion Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalImageURL__c</fullName>
        <label>[DoNotUse]Promotional Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalImage__c</fullName>
        <label>Promotional Image</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalMessageText__c</fullName>
        <label>[DoNotUse]Promotional Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalMessage__c</fullName>
        <label>Promotional Message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPromotionId__c</fullName>
        <label>Related Promotion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentEndDate__c</fullName>
        <label>Shipment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentStartDate__c</fullName>
        <label>Shipment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRewardValueAmount__c</fullName>
        <label>Total Reward Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761178517_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_Id_map_Promotion_LeadId_N_1_164_rel</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>Lead_Id_map_Promotion_LeadId_N_1_164_rel</relationshipLabel>
        <relationshipName>rel_1697761178517_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761182131_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrency_Id_map_Promot_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrency_Id_map_Promot_rel</relationshipLabel>
        <relationshipName>rel_1697761182131_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184539_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgram_Id_map_Promotion_Loya_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgram_Id_map_Promotion_Loya_rel</relationshipLabel>
        <relationshipName>rel_1697761184539_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>